--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -4,7 +4,11 @@
   padding: 0;
 }
 
-/* header*/
+/* 
+======================
+header
+======================
+*/
 
 header {
   background: url(/assets/images/start-screen-gradient-background.png) no-repeat
@@ -12,10 +16,10 @@ header {
   background-size: cover;
   max-width: 100vw;
   height: 100vh;
-  padding-top: 3.75rem;
+  padding-top: 3.5rem;
 }
 
-.section-center {
+.header-center {
   max-width: 1200px;
   margin: 0 auto;
   height: 100%;
@@ -112,4 +116,46 @@ header {
 
 .main-left a:hover {
   background: rgba(253, 220, 196, 1);
+}
+
+/* 
+======================
+about
+======================
+*/
+.about {
+  padding: 5rem 6.25rem;
+  max-width: 100vw;
+}
+.about-center {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 7.5rem;
+}
+.about-right {
+  max-width: 26.875rem;
+}
+.about-right h1 {
+  color: rgba(84, 84, 84, 1);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 2.1875rem;
+  line-height: 2.84375rem;
+  font-weight: 400;
+  letter-spacing: 0.06rem;
+  max-width: 23.125rem;
+  margin-bottom: 1.5625rem;
+}
+.about-right p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 1.5rem;
+  color: rgba(76, 76, 76, 1);
+}
+
+#first-p {
+  margin-bottom: 1.5625rem;
 }
