--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -123,6 +123,7 @@ header {
 about
 ======================
 */
+
 .about {
   padding: 5rem 6.25rem;
   max-width: 100vw;
@@ -158,4 +159,144 @@ about
 
 #first-p {
   margin-bottom: 1.5625rem;
+}
+
+/* 
+======================
+our friends
+======================
+*/
+
+.friends {
+  max-width: 100vw;
+  padding: 5rem 0 6.25rem;
+  background: rgba(246, 246, 246, 1);
+}
+
+.friends-title {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 2.1875rem;
+  line-height: 2.84375rem;
+  text-align: center;
+  width: 25rem;
+  margin: 0 auto;
+  color: rgba(84, 84, 84, 1);
+  letter-spacing: 0.06rem;
+  margin-bottom: 3.75rem;
+}
+.friends-center {
+  max-width: 1200px;
+  margin: 0 auto 3.75rem;
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+}
+.single-card:nth-child(n + 4) {
+  display: none;
+}
+.single-card {
+  background: rgba(250, 250, 250, 1);
+  border-radius: 0.5625rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  transition: all 300ms linear;
+}
+.single-card:hover a {
+  background: rgba(253, 220, 196, 1);
+}
+.single-card:hover {
+  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+}
+
+.single-card h1 {
+  text-transform: capitalize;
+  color: rgba(84, 84, 84, 1);
+  font-size: 1.25rem;
+  font-weight: 400;
+  letter-spacing: 0.06rem;
+  line-height: 1.4375rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin: 1.875rem 0;
+}
+.single-card a {
+  text-decoration: none;
+  color: rgba(41, 41, 41, 1);
+  margin-bottom: 1.875rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.0625rem;
+  font-weight: 400;
+  letter-spacing: 0.06rem;
+  padding: 0.9375rem 2.8125rem;
+  border: rgba(253, 220, 196, 1) solid 1px;
+  border-radius: 6.25rem;
+  transition: all 300ms linear;
+}
+.single-card a:hover {
+  background: rgba(241, 205, 179, 1);
+}
+#rest-btn {
+  display: flex;
+  justify-content: center;
+}
+
+#rest-btn a {
+  text-decoration: none;
+  font-size: 1.0625rem;
+  line-height: 130%;
+  font-weight: 400;
+  letter-spacing: 0.06rem;
+  color: rgba(41, 41, 41, 1);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 0.9375rem 2.8125rem;
+  background: rgba(241, 205, 179, 1);
+  border-radius: 6.25rem;
+  border: rgba(253, 220, 196, 1) solid 1px;
+  transition: all 300ms linear;
+}
+#rest-btn a:hover {
+  background: none;
+}
+
+.left-btn {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  background: transparent;
+  border: 2px solid rgba(241, 205, 179, 1);
+  width: 3.25rem;
+  height: 3.25rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 300ms linear;
+}
+
+.right-btn {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(50%, -50%);
+  cursor: pointer;
+  background: transparent;
+  border: 2px solid #f1cdb3;
+  width: 3.25rem;
+  height: 3.25rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 300ms linear;
+}
+.left-btn:hover {
+  background: rgba(241, 205, 179, 1);
+}
+
+.right-btn:hover {
+  background: rgba(241, 205, 179, 1);
 }
