--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -16,7 +16,7 @@ header {
   background-size: cover;
   max-width: 100vw;
   height: 100vh;
-  padding-top: 3.5rem;
+  padding-top: 3.75rem;
 }
 
 .header-center {
@@ -299,4 +299,56 @@ our friends
 
 .right-btn:hover {
   background: rgba(241, 205, 179, 1);
+}
+
+/* 
+======================
+help
+======================
+*/
+
+.help {
+  max-width: 100vw;
+  padding: 5rem 0 6.25rem;
+}
+.help-title {
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 3.75rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 2.1875rem;
+  line-height: 2.84375rem;
+  font-weight: 400;
+  color: rgba(84, 84, 84, 1);
+  letter-spacing: 0.06rem;
+  width: 19.25rem;
+}
+.help-center {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.first-row {
+  display: flex;
+  justify-content: center;
+  column-gap: 7.5rem;
+  margin-bottom: 3.4375rem;
+}
+.second-row {
+  display: flex;
+  justify-content: center;
+  column-gap: 7.5rem;
+}
+.single-item {
+  text-align: center;
+}
+.single-item img {
+  margin-bottom: 1.875rem;
+}
+.single-item h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.25rem;
+  line-height: 1.4375rem;
+  color: rgba(84, 84, 84, 1);
+  font-weight: 400;
+  letter-spacing: 0.06rem;
 }
