--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -352,3 +352,67 @@ help
   font-weight: 400;
   letter-spacing: 0.06rem;
 }
+
+/* 
+======================
+donation
+======================
+*/
+
+.donation {
+  background: rgba(246, 246, 246, 1);
+  max-width: 100vw;
+  padding: 5rem 0 6.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.875rem;
+}
+.donation-right {
+  max-width: 23.75rem;
+}
+.donation-right h1 {
+  font-size: 2.1875rem;
+  font-weight: 400;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  line-height: 130%;
+  letter-spacing: 0.06rem;
+  color: rgba(84, 84, 84, 1);
+  max-width: 18.75rem;
+}
+.donation-right h3 {
+  margin: 1.25rem 0;
+  font-weight: 400;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 0.9375rem;
+  line-height: 110%;
+  letter-spacing: 0.06rem;
+  color: rgba(84, 84, 84, 1);
+}
+.card {
+  display: flex;
+  align-items: center;
+  column-gap: 0.9375rem;
+  padding: 0.625rem 0.9375rem;
+  width: fit-content;
+  background: rgba(241, 205, 179, 1);
+  border-radius: 0.5625rem;
+  margin-bottom: 1.25rem;
+}
+.card a {
+  font-weight: 400;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.25rem;
+  color: rgba(84, 84, 84, 1);
+  line-height: 115%;
+  letter-spacing: 0.06rem;
+  text-decoration: none;
+}
+.donation-right p {
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1.125rem;
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgba(178, 178, 178, 1);
+}
