--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -11,11 +11,9 @@ header
 */
 
 header {
-  background: url(/assets/images/start-screen-gradient-background.png) no-repeat
-    center;
-  background-size: cover;
+  background: url(/assets/images/noise_transparent@2x.png),
+    radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #211f20;
   max-width: 100vw;
-  height: 100vh;
   padding-top: 3.75rem;
 }
 
@@ -74,8 +72,7 @@ header {
 .main {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  max-height: 75vh;
+  margin-top: 3.75rem;
 }
 .main-right {
   height: 100%;
@@ -83,6 +80,7 @@ header {
 }
 .main-left {
   width: 33.33%;
+  margin-top: 9rem;
 }
 .main-left h1 {
   color: white;
@@ -415,4 +413,54 @@ donation
   font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
   color: rgba(178, 178, 178, 1);
+}
+
+/* 
+======================
+footer
+======================
+*/
+
+footer {
+  background: url(/assets/images/noise_transparent@2x.png),
+    radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%),
+    #211f20;
+  padding-top: 2.5rem;
+  max-width: 100vw;
+}
+.footer-center {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  column-gap: 10rem;
+  padding-top: 1rem;
+}
+.column h1 {
+  font-weight: 400;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 2.1875rem;
+  line-height: 130%;
+  letter-spacing: 0.06rem;
+  color: rgba(255, 255, 255, 1);
+  margin-bottom: 2.5rem;
+}
+
+.column a {
+  text-decoration: none;
+  display: block;
+}
+.margin-btm {
+  margin-bottom: 2.5rem;
+}
+.row {
+  display: flex;
+  align-items: center;
+  column-gap: 1.25rem;
+  font-weight: 400;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.25rem;
+  line-height: 115%;
+  letter-spacing: 0.06rem;
+  color: rgba(241, 205, 179, 1);
 }
