--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -15,7 +15,7 @@ header
 */
 
 header {
-  background: url(/assets/images/noise_transparent@2x.png),
+  background: url(../../assets/images/noise_transparent@2x.png),
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #211f20;
   max-width: 100vw;
   padding-top: 3.75rem;
@@ -432,7 +432,7 @@ footer
 */
 
 footer {
-  background: url(/assets/images/noise_transparent@2x.png),
+  background: url(../../assets/images/noise_transparent@2x.png),
     radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%),
     #211f20;
   padding-top: 2.5rem;
