--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -3,3 +3,62 @@
   margin: 0;
   padding: 0;
 }
+
+/* 
+======================
+header
+======================
+*/
+
+header {
+  max-width: 100vw;
+  padding: 1.875rem 0;
+}
+.header-center {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  text-decoration: none;
+}
+.logo h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 110%;
+  letter-spacing: 0.06rem;
+  color: #545454;
+  margin-bottom: 0.625rem;
+}
+.logo p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 0.8125rem;
+  line-height: 0.9375rem;
+  letter-spacing: 0.01rem;
+  color: #292929;
+}
+nav li {
+  display: inline-block;
+  margin-left: 2.1875rem;
+}
+nav a {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 0.9375rem;
+  line-height: 160%;
+  color: #545454;
+  padding-bottom: 3px;
+  transition: all 300ms linear;
+}
+nav a:hover {
+  color: #292929;
+}
+#active {
+  color: #292929;
+  border-bottom: 3px solid rgba(241, 205, 179, 1);
+}
