--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -62,3 +62,109 @@ nav a:hover {
   color: #292929;
   border-bottom: 3px solid rgba(241, 205, 179, 1);
 }
+
+/* 
+======================
+our friends
+======================
+*/
+.our-friends {
+  max-width: 100vw;
+  background: #f6f6f6;
+  padding: 5rem 0 6.25rem;
+}
+.our-friends-center {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.our-friends-title {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 2.1875rem;
+  line-height: 130%;
+  letter-spacing: 0.06rem;
+  color: #545454;
+  margin: 0 auto 3.75rem;
+  text-align: center;
+  max-width: 25rem;
+}
+.cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 2.5rem;
+  row-gap: 1.875rem;
+  margin-bottom: 3.75rem;
+}
+.single-card {
+  width: 270px;
+  background: rgba(250, 250, 250, 1);
+  border-radius: 0.5625rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  transition: all 300ms linear;
+}
+.single-card:hover a {
+  background: rgba(241, 205, 179, 1);
+}
+.single-card:hover {
+  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+}
+
+.single-card h3 {
+  text-transform: capitalize;
+  color: rgba(84, 84, 84, 1);
+  font-size: 1.25rem;
+  font-weight: 400;
+  letter-spacing: 0.06rem;
+  line-height: 1.4375rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin: 1.875rem 0;
+}
+.single-card a {
+  text-decoration: none;
+  color: rgba(41, 41, 41, 1);
+  margin-bottom: 1.875rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.0625rem;
+  font-weight: 400;
+  letter-spacing: 0.06rem;
+  padding: 0.9375rem 2.8125rem;
+  border: rgba(241, 205, 179, 1) solid 1px;
+  border-radius: 6.25rem;
+  transition: all 300ms linear;
+}
+.single-card a:hover {
+  border: rgba(253, 220, 196, 1) solid 1px;
+  background: rgba(253, 220, 196, 1);
+}
+.pagination {
+  display: flex;
+  justify-content: center;
+  column-gap: 1.25rem;
+}
+.pagination button {
+  width: 3.25rem;
+  height: 3.25rem;
+  border-radius: 50%;
+  background: transparent;
+  cursor: pointer;
+  color: #292929;
+  border: 2px solid #f1cdb3;
+  transition: all 300ms linear;
+}
+.pagination button:hover {
+  background: #f1cdb3;
+}
+
+.pagination button:nth-child(1),
+.pagination button:nth-child(2) {
+  color: #cdcdcd;
+  border: 2px solid #cdcdcd;
+  background: transparent;
+  cursor: not-allowed;
+}
+.pagination button:nth-child(3) {
+  background: #f1cdb3;
+}
