--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -168,3 +168,53 @@ our friends
 .pagination button:nth-child(3) {
   background: #f1cdb3;
 }
+
+/* 
+======================
+footer
+======================
+*/
+
+footer {
+  background: url(../../assets/images/noise_transparent@2x.png),
+    radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%),
+    #211f20;
+  padding-top: 2.5rem;
+  max-width: 100vw;
+}
+.footer-center {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  column-gap: 10rem;
+  padding-top: 1rem;
+}
+.column h1 {
+  font-weight: 400;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 2.1875rem;
+  line-height: 130%;
+  letter-spacing: 0.06rem;
+  color: rgba(255, 255, 255, 1);
+  margin-bottom: 2.5rem;
+}
+
+.column a {
+  text-decoration: none;
+  display: block;
+}
+.margin-btm {
+  margin-bottom: 2.5rem;
+}
+.row {
+  display: flex;
+  align-items: center;
+  column-gap: 1.25rem;
+  font-weight: 400;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.25rem;
+  line-height: 115%;
+  letter-spacing: 0.06rem;
+  color: rgba(241, 205, 179, 1);
+}
