--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -156,6 +156,11 @@ our friends
   color: #292929;
   border: 2px solid #f1cdb3;
   transition: all 300ms linear;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 115%;
+  letter-spacing: 0.06rem;
 }
 .pagination button:hover {
   background: #f1cdb3;
