--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -16,6 +16,9 @@ header
 header {
   max-width: 100vw;
   padding: 1.875rem 0;
+  position: sticky;
+  background: rgba(255, 255, 255, 1);
+  top: 0;
 }
 .header-center {
   max-width: 1200px;
@@ -64,6 +67,9 @@ nav a:hover {
 #active {
   color: #292929;
   border-bottom: 3px solid rgba(241, 205, 179, 1);
+}
+.header-center img {
+  display: none;
 }
 
 /* 
@@ -225,4 +231,322 @@ footer {
   line-height: 115%;
   letter-spacing: 0.06rem;
   color: rgba(241, 205, 179, 1);
+}
+
+@media (min-width: 768px) and (max-width: 1279px) {
+  header {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .our-friends {
+    padding: 5rem 0 4.75rem;
+  }
+  .our-friends-title {
+    margin: 0 auto 1.875rem;
+  }
+  .single-card:nth-child(n + 7) {
+    display: none;
+  }
+  .single-card:nth-child(odd) {
+    justify-self: end;
+  }
+  .single-card:nth-child(even) {
+    justify-self: flex-start;
+  }
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+    column-gap: 5.2vw;
+    margin-bottom: 2.5rem;
+  }
+  footer {
+    padding-top: 1.875rem;
+  }
+  .footer-center {
+    display: block;
+    text-align: center;
+    padding-top: 0;
+  }
+  .footer-center img:nth-child(3) {
+    display: block;
+    margin: 0 auto;
+  }
+  .column {
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin-bottom: 4.3175rem;
+    width: 18.2rem;
+  }
+  .column:nth-child(1) {
+    margin-right: 3.75rem;
+  }
+
+  .footer-center img:nth-child(3) {
+    display: block;
+    margin: 0 auto;
+  }
+  .column h2 {
+    font-size: 1.5625rem;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  header {
+    max-width: 100vw;
+    padding: 1.875rem 10px;
+  }
+
+  /* mobile menu */
+  .mobile-menu {
+    background-color: #292929;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+    transition: all 300ms linear;
+  }
+  .menu-inactive {
+    transform: translateX(100%);
+  }
+  .menu-top {
+    margin: 1.875rem 3.3125rem 1.875rem 0.675rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .menu-top img {
+    cursor: pointer;
+    transition: all 375ms linear;
+  }
+  .btn-rotate {
+    transform: rotate(90deg);
+  }
+  .menu {
+    margin-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 2.5rem;
+  }
+  .menu a {
+    text-decoration: none;
+    color: rgba(205, 205, 205, 1);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    transition: all 300ms linear;
+  }
+  #active {
+    color: white;
+    border-bottom: 3px solid rgba(241, 205, 179, 1);
+  }
+  .nav-left {
+    text-decoration: none;
+  }
+
+  .nav-left h1 {
+    font-size: 2rem;
+    text-transform: capitalize;
+    font-weight: 400;
+    color: rgba(241, 205, 179, 1);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 0.06rem;
+    margin-bottom: 0.5rem;
+  }
+  .nav-left p {
+    font-size: 0.8125rem;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.09rem;
+    margin-left: 0.1rem;
+  }
+  /* end of mobile menu */
+  .header-center {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header-center nav {
+    display: none;
+  }
+  .header-center img {
+    margin-right: 2.6875rem;
+    display: inline;
+  }
+  .our-friends {
+    padding: 2.625rem 10px;
+  }
+  .our-friends-title {
+    font-size: 1.5675rem;
+    margin: 0 auto 2.625rem;
+  }
+  .cards {
+    display: block;
+    margin-bottom: 2.625rem;
+  }
+  .single-card {
+    margin: 0 auto 1.875rem;
+  }
+  .single-card:nth-child(3) {
+    margin-bottom: 0;
+  }
+  .single-card:nth-child(n + 4) {
+    display: none;
+  }
+  .pagination {
+    column-gap: 0.625rem;
+  }
+
+  footer {
+    background: url(../../assets/images/noise_transparent@2x.png),
+      radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%),
+      #211f20;
+    padding: 1.875rem 0.625rem 0;
+  }
+  .footer-center {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+    padding-top: 0;
+  }
+  .footer-center img:nth-child(3) {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .column h2 {
+    font-weight: 400;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.5625rem;
+    line-height: 130%;
+    letter-spacing: 0.06rem;
+    color: rgba(255, 255, 255, 1);
+    margin-bottom: 2.5rem;
+    text-align: center;
+  }
+  .column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .column a {
+    text-decoration: none;
+    display: block;
+  }
+  .margin-btm {
+    margin-bottom: 2.5rem;
+  }
+  .row {
+    display: flex;
+    align-items: center;
+    column-gap: 1.25rem;
+    font-weight: 400;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06rem;
+    color: rgba(241, 205, 179, 1);
+  }
+}
+@media (max-width: 319px) {
+  header {
+    max-width: 100vw;
+    padding: 1.875rem 10px;
+  }
+  .header-center {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header-center nav {
+    display: none;
+  }
+  .header-center img {
+    margin-right: 2.6875rem;
+    display: inline;
+  }
+  .our-friends {
+    padding: 2.625rem 10px;
+  }
+  .our-friends-title {
+    font-size: 1.5675rem;
+    margin: 0 auto 2.625rem;
+  }
+  .cards {
+    display: block;
+    margin-bottom: 2.625rem;
+  }
+  .single-card {
+    margin: 0 auto 1.875rem;
+  }
+  .single-card:nth-child(3) {
+    margin-bottom: 0;
+  }
+  .single-card:nth-child(n + 4) {
+    display: none;
+  }
+  .pagination {
+    column-gap: 0.625rem;
+  }
+
+  footer {
+    background: url(../../assets/images/noise_transparent@2x.png),
+      radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%),
+      #211f20;
+    padding: 1.875rem 0.625rem 0;
+  }
+  .footer-center {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+    padding-top: 0;
+  }
+  .footer-center img:nth-child(3) {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .column h2 {
+    font-weight: 400;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.5625rem;
+    line-height: 130%;
+    letter-spacing: 0.06rem;
+    color: rgba(255, 255, 255, 1);
+    margin-bottom: 2.5rem;
+    text-align: center;
+  }
+  .column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .column a {
+    text-decoration: none;
+    display: block;
+  }
+  .margin-btm {
+    margin-bottom: 2.5rem;
+  }
+  .row {
+    display: flex;
+    align-items: center;
+    column-gap: 1.25rem;
+    font-weight: 400;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06rem;
+    color: rgba(241, 205, 179, 1);
+  }
 }
