--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -461,6 +461,71 @@ footer {
     max-width: 100vw;
     padding: 1.875rem 10px;
   }
+  /* mobile menu */
+  .mobile-menu {
+    background-color: #292929;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+  }
+
+  .menu-top {
+    margin: 1.875rem 3.3125rem 1.875rem 0.675rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .menu-top img {
+    cursor: pointer;
+    transition: all 375ms linear;
+  }
+  .btn-rotate {
+    transform: rotate(90deg);
+  }
+  .menu {
+    margin-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 2.5rem;
+  }
+  .menu a {
+    text-decoration: none;
+    color: rgba(205, 205, 205, 1);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    transition: all 300ms linear;
+  }
+  #active {
+    color: white;
+    border-bottom: 3px solid rgba(241, 205, 179, 1);
+  }
+  .nav-left {
+    text-decoration: none;
+  }
+
+  .nav-left h1 {
+    font-size: 2rem;
+    text-transform: capitalize;
+    font-weight: 400;
+    color: rgba(241, 205, 179, 1);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 0.06rem;
+    margin-bottom: 0.5rem;
+  }
+  .nav-left p {
+    font-size: 0.8125rem;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.09rem;
+    margin-left: 0.1rem;
+  }
+  /* end of mobile menu */
   .header-center {
     max-width: 1200px;
     margin: 0 auto;
