--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -91,7 +91,7 @@ header
     font-weight: 400;
     color: rgba(241, 205, 179, 1);
     font-family: Georgia, 'Times New Roman', Times, serif;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 0.5rem;
   }
   .nav-left p {
@@ -147,7 +147,7 @@ header
     font-size: 1.5625rem;
     line-height: 130%;
     text-align: center;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     padding: 0 2rem;
     max-width: 19.375rem;
   }
@@ -214,7 +214,7 @@ about
     font-weight: 400;
     padding: 0 2rem;
     text-align: center;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 1.5625rem;
   }
   .about-right p {
@@ -251,7 +251,7 @@ our friends
     text-align: center;
     margin: 0 auto;
     color: rgba(84, 84, 84, 1);
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 2.625rem;
   }
   .friends-center {
@@ -286,7 +286,7 @@ our friends
     color: rgba(84, 84, 84, 1);
     font-size: 1.25rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     line-height: 1.4375rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 1.875rem 0;
@@ -298,7 +298,7 @@ our friends
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.0625rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     padding: 0.9375rem 2.8125rem;
     border: rgba(241, 205, 179, 1) solid 1px;
     border-radius: 6.25rem;
@@ -318,7 +318,7 @@ our friends
     font-size: 1.0625rem;
     line-height: 130%;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(41, 41, 41, 1);
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 0.9375rem 2.8125rem;
@@ -391,7 +391,7 @@ help
     line-height: 130%;
     font-weight: 400;
     color: rgba(84, 84, 84, 1);
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     max-width: 13.75rem;
   }
   .help-center {
@@ -413,7 +413,7 @@ help
     line-height: 110%;
     color: rgba(84, 84, 84, 1);
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
   }
 
   /* 
@@ -442,7 +442,7 @@ donation
     font-weight: 400;
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 130%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(84, 84, 84, 1);
     text-align: center;
     padding: 0 2rem;
@@ -517,7 +517,7 @@ footer
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.5625rem;
     line-height: 130%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(255, 255, 255, 1);
     margin-bottom: 2.5rem;
     text-align: center;
@@ -542,7 +542,7 @@ footer
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.25rem;
     line-height: 115%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(241, 205, 179, 1);
   }
 }
@@ -633,7 +633,7 @@ header
     font-weight: 400;
     color: rgba(241, 205, 179, 1);
     font-family: Georgia, 'Times New Roman', Times, serif;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 0.5rem;
   }
   .nav-left p {
@@ -690,7 +690,7 @@ header
     font-size: 1.5625rem;
     line-height: 130%;
     text-align: center;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     padding: 0 2rem;
     max-width: 19.375rem;
   }
@@ -711,10 +711,12 @@ header
     text-decoration: none;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.0625rem;
+    line-height: 130%;
     font-weight: 400;
     background: rgba(241, 205, 179, 1);
     padding: 0.9375rem 2.8125rem;
     border-radius: 6.25rem;
+    letter-spacing: 0.06em;
     transition: all 300ms linear;
     width: max-content;
     align-self: center;
@@ -757,7 +759,7 @@ about
     font-weight: 400;
     padding: 0 2rem;
     text-align: center;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 1.5625rem;
   }
   .about-right p {
@@ -794,7 +796,7 @@ our friends
     text-align: center;
     margin: 0 auto;
     color: rgba(84, 84, 84, 1);
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 2.625rem;
   }
   .friends-center {
@@ -829,7 +831,7 @@ our friends
     color: rgba(84, 84, 84, 1);
     font-size: 1.25rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     line-height: 1.4375rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 1.875rem 0;
@@ -841,7 +843,8 @@ our friends
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.0625rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
+    line-height: 100%;
     padding: 0.9375rem 2.8125rem;
     border: rgba(241, 205, 179, 1) solid 1px;
     border-radius: 6.25rem;
@@ -861,7 +864,7 @@ our friends
     font-size: 1.0625rem;
     line-height: 130%;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(41, 41, 41, 1);
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 0.9375rem 2.8125rem;
@@ -878,7 +881,7 @@ our friends
     position: absolute;
     top: 100%;
     left: 0;
-    transform: translate(82.69%, 38.46%);
+    transform: translate(111.5384%, 38.46%);
     cursor: pointer;
     background: transparent;
     border: 2px solid rgba(241, 205, 179, 1);
@@ -895,7 +898,7 @@ our friends
     position: absolute;
     top: 100%;
     right: 0;
-    transform: translate(-82.69%, 38.46%);
+    transform: translate(-111.5384%, 38.46%);
     cursor: pointer;
     background: transparent;
     border: 2px solid #f1cdb3;
@@ -934,8 +937,8 @@ help
     line-height: 130%;
     font-weight: 400;
     color: rgba(84, 84, 84, 1);
-    letter-spacing: 0.06rem;
-    max-width: 13.75rem;
+    letter-spacing: 0.06em;
+    max-width: 13.9rem;
   }
   .help-center {
     display: grid;
@@ -959,7 +962,7 @@ help
     line-height: 110%;
     color: rgba(84, 84, 84, 1);
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     height: 1.0625rem;
   }
 
@@ -980,6 +983,7 @@ donation
   }
   .donation-left {
     width: 16.25rem;
+    height: 8.45rem;
   }
   .donation-right {
     display: flex;
@@ -991,7 +995,7 @@ donation
     font-weight: 400;
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 130%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(84, 84, 84, 1);
     text-align: center;
     padding: 0 2rem;
@@ -1001,7 +1005,7 @@ donation
     font-weight: 400;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 0.9375rem;
-    line-height: 160%;
+    line-height: 130%;
     color: rgba(84, 84, 84, 1);
     text-align: center;
   }
@@ -1143,7 +1147,7 @@ header
     font-weight: 400;
     color: rgba(241, 205, 179, 1);
     font-family: Georgia, 'Times New Roman', Times, serif;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 0.5rem;
   }
   .nav-left p {
@@ -1151,17 +1155,21 @@ header
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
-    letter-spacing: 0.09rem;
-    margin-left: 0.1rem;
+    letter-spacing: 0.1em;
+    text-align: center;
+  }
+  .nav-right {
+    display: flex;
+    column-gap: 2.1875rem;
   }
   .nav-right a {
-    margin-left: 2.1875rem;
     text-decoration: none;
     color: rgba(205, 205, 205, 1);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 0.9375rem;
     padding-bottom: 3px;
+    letter-spacing: 0.007em;
     transition: all 300ms linear;
   }
   #active {
@@ -1204,6 +1212,7 @@ header
     font-size: 0.9375rem;
     font-weight: 400;
     line-height: 1.5rem;
+    line-height: 160%;
     text-align: justify;
     max-width: 28.75rem;
   }
@@ -1217,7 +1226,8 @@ header
     font-weight: 400;
     background: rgba(241, 205, 179, 1);
     padding: 0.9375rem 2.8125rem;
-    border-radius: 6.25rem;
+    border-radius: 6.25em;
+    letter-spacing: 0.06em;
     transition: all 300ms linear;
     width: max-content;
     align-self: center;
@@ -1234,7 +1244,7 @@ about
 */
 
   .about {
-    padding: 5rem 6.25rem;
+    padding: 5rem 0 6.25rem;
     max-width: 100vw;
   }
   .about-center {
@@ -1255,7 +1265,7 @@ about
     font-size: 2.1875rem;
     line-height: 2.84375rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     max-width: 23.125rem;
     margin-bottom: 1.5625rem;
   }
@@ -1292,7 +1302,7 @@ our friends
     width: 25rem;
     margin: 0 auto;
     color: rgba(84, 84, 84, 1);
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 3.75rem;
   }
   .friends-center {
@@ -1327,7 +1337,7 @@ our friends
     color: rgba(84, 84, 84, 1);
     font-size: 1.25rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     line-height: 1.4375rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 1.875rem 0;
@@ -1339,9 +1349,10 @@ our friends
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.0625rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
+    line-height: 130%;
     padding: 0.9375rem 2.8125rem;
-    border: rgba(241, 205, 179, 1) solid 1px;
+    border: 1px solid rgba(241, 205, 179, 1);
     border-radius: 6.25rem;
     transition: all 300ms linear;
   }
@@ -1357,9 +1368,9 @@ our friends
   #rest-btn a {
     text-decoration: none;
     font-size: 1.0625rem;
-    line-height: 130%;
+    line-height: 100%;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.05em;
     color: rgba(41, 41, 41, 1);
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 0.9375rem 2.8125rem;
@@ -1432,8 +1443,8 @@ help
     line-height: 2.84375rem;
     font-weight: 400;
     color: rgba(84, 84, 84, 1);
-    letter-spacing: 0.06rem;
-    width: 19.25rem;
+    letter-spacing: 0.06em;
+    width: 19.4rem;
   }
   .help-center {
     display: grid;
@@ -1446,6 +1457,8 @@ help
     text-align: center;
   }
   .single-item img {
+    display: block;
+    margin: 0 auto;
     margin-bottom: 1.875rem;
   }
   .single-item h1 {
@@ -1454,7 +1467,7 @@ help
     line-height: 1.4375rem;
     color: rgba(84, 84, 84, 1);
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
   }
 
   /* 
@@ -1480,7 +1493,7 @@ donation
     font-weight: 400;
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 130%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(84, 84, 84, 1);
     max-width: 18.75rem;
   }
@@ -1490,7 +1503,7 @@ donation
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 0.9375rem;
     line-height: 110%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(84, 84, 84, 1);
   }
   .card {
@@ -1513,7 +1526,7 @@ donation
     font-size: 1.25rem;
     color: rgba(84, 84, 84, 1);
     line-height: 115%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     text-decoration: none;
   }
   .donation-right p {
@@ -1551,18 +1564,26 @@ footer
     display: inline-block;
     vertical-align: top;
     text-align: left;
-    margin-bottom: 4.3175rem;
-    width: 18.2rem;
+    margin-bottom: 4rem;
   }
   .column:nth-child(1) {
-    margin-right: 3.75rem;
+    max-width: 17.5rem;
+    margin-right: 3.45rem;
   }
+  .column:nth-child(2) {
+    max-width: 19rem;
+  }
+  .column:nth-child(2) h1,
+  .column:nth-child(2) > .margin-btm {
+    margin-bottom: 2.0625rem;
+  }
+
   .column h1 {
     font-weight: 400;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 2.1875rem;
     line-height: 130%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(255, 255, 255, 1);
     margin-bottom: 2.5rem;
   }
@@ -1582,7 +1603,7 @@ footer
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.25rem;
     line-height: 115%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(241, 205, 179, 1);
   }
 }
@@ -1619,6 +1640,7 @@ header
   }
   .nav-left {
     text-decoration: none;
+    text-align: center;
   }
 
   .nav-left h1 {
@@ -1627,7 +1649,7 @@ header
     font-weight: 400;
     color: rgba(241, 205, 179, 1);
     font-family: Georgia, 'Times New Roman', Times, serif;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 0.5rem;
   }
   .nav-left p {
@@ -1635,18 +1657,21 @@ header
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
-    letter-spacing: 0.09rem;
-    margin-left: 0.1rem;
+    letter-spacing: 0.1em;
+    line-height: 0.9375rem;
   }
   .nav-right a {
-    margin-left: 2.1875rem;
     text-decoration: none;
     color: rgba(205, 205, 205, 1);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 0.9375rem;
-    padding-bottom: 3px;
+    line-height: 160%;
     transition: all 300ms linear;
+  }
+  .nav-right {
+    display: flex;
+    column-gap: 2.1875rem;
   }
   #active {
     color: white;
@@ -1666,7 +1691,7 @@ header
     object-fit: cover;
   }
   .main-left {
-    width: 33.33%;
+    width: 28.75rem;
     margin-top: 10.1875rem;
   }
   .main-left h1 {
@@ -1676,11 +1701,13 @@ header
     font-size: 2.75rem;
     line-height: 3.575rem;
     margin-bottom: 2.625rem;
+    max-width: 19.375rem;
   }
 
   .main-left p {
     color: rgba(205, 205, 205, 1);
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9375rem;
     font-weight: 400;
     line-height: 1.5rem;
     margin-bottom: 2.625rem;
@@ -1690,11 +1717,14 @@ header
   .main-left a {
     color: rgba(41, 41, 41, 1);
     text-decoration: none;
+    display: inline-block;
+    padding: 0.9375rem 2.8125rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.0625rem;
+    line-height: 130%;
+    letter-spacing: 0.06em;
     font-weight: 400;
     background: rgba(241, 205, 179, 1);
-    padding: 0.9375rem 2.8125rem;
     border-radius: 6.25rem;
     transition: all 300ms linear;
   }
@@ -1710,7 +1740,7 @@ about
 */
 
   .about {
-    padding: 5rem 6.25rem;
+    padding: 5rem 0 6.25rem;
     max-width: 100vw;
   }
   .about-center {
@@ -1730,7 +1760,7 @@ about
     font-size: 2.1875rem;
     line-height: 2.84375rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     max-width: 23.125rem;
     margin-bottom: 1.5625rem;
   }
@@ -1767,7 +1797,7 @@ our friends
     width: 25rem;
     margin: 0 auto;
     color: rgba(84, 84, 84, 1);
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     margin-bottom: 3.75rem;
   }
   .friends-center {
@@ -1802,7 +1832,7 @@ our friends
     color: rgba(84, 84, 84, 1);
     font-size: 1.25rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     line-height: 1.4375rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 1.875rem 0;
@@ -1814,7 +1844,7 @@ our friends
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.0625rem;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     padding: 0.9375rem 2.8125rem;
     border: rgba(241, 205, 179, 1) solid 1px;
     border-radius: 6.25rem;
@@ -1834,7 +1864,7 @@ our friends
     font-size: 1.0625rem;
     line-height: 130%;
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(41, 41, 41, 1);
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 0.9375rem 2.8125rem;
@@ -1904,11 +1934,11 @@ help
     margin-bottom: 3.75rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 2.1875rem;
-    line-height: 2.84375rem;
+    line-height: 130%;
     font-weight: 400;
     color: rgba(84, 84, 84, 1);
-    letter-spacing: 0.06rem;
-    width: 19.25rem;
+    letter-spacing: 0.06em;
+    width: 19.5rem;
   }
   .help-center {
     max-width: 1200px;
@@ -1928,6 +1958,8 @@ help
     margin-right: 0;
   }
   .single-item img {
+    display: block;
+    margin: 0 auto;
     margin-bottom: 1.875rem;
   }
   .single-item h1 {
@@ -1936,7 +1968,9 @@ help
     line-height: 1.4375rem;
     color: rgba(84, 84, 84, 1);
     font-weight: 400;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
+    line-height: 115%;
+    text-align: center;
   }
 
   /* 
@@ -1962,7 +1996,7 @@ donation
     font-weight: 400;
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 130%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(84, 84, 84, 1);
     max-width: 18.75rem;
   }
@@ -1972,7 +2006,7 @@ donation
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 0.9375rem;
     line-height: 110%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(84, 84, 84, 1);
   }
   .card {
@@ -1995,7 +2029,7 @@ donation
     font-size: 1.25rem;
     color: rgba(84, 84, 84, 1);
     line-height: 115%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     text-decoration: none;
   }
   .donation-right p {
@@ -2026,6 +2060,8 @@ footer
     display: flex;
     justify-content: center;
     column-gap: 10rem;
+  }
+  .column {
     padding-top: 1rem;
   }
   .column h1 {
@@ -2033,9 +2069,18 @@ footer
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 2.1875rem;
     line-height: 130%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(255, 255, 255, 1);
     margin-bottom: 2.5rem;
+  }
+  .column:nth-child(1) {
+    max-width: 17.4rem;
+  }
+  .column:nth-child(2) h1 {
+    margin-bottom: 2rem;
+  }
+  .column:nth-child(1) a {
+    margin-bottom: 2.4rem;
   }
 
   .column a {
@@ -2043,7 +2088,7 @@ footer
     display: block;
   }
   .margin-btm {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.8rem;
   }
   .row {
     display: flex;
@@ -2053,7 +2098,7 @@ footer
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.25rem;
     line-height: 115%;
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.06em;
     color: rgba(241, 205, 179, 1);
   }
 }
