feat: add pagination to the pets page

--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -269,8 +269,7 @@ our friends
   background: #f1cdb3;
 }
 
-.pagination button:nth-child(1),
-.pagination button:nth-child(2) {
+#btn-inactive {
   color: #cdcdcd;
   border: 2px solid #cdcdcd;
   background: transparent;
